--- a/DS04-REST API/src/Wiki_Bot.ipynb
+++ b/DS04-REST API/src/Wiki_Bot.ipynb
@@ -14,7 +14,7 @@
     "import wikipedia\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "API_TOKEN = '6050824606:AAHNac-LYZ5rKWrcPauk1W7CsqqRzNCV0HE'\n",
+    "API_TOKEN = 'XXX'\n",
     "\n",
     "\n",
     "class WikiBot:\n",
